--- a/app/Resources/views/admin/site/feuille_list.html.twig
+++ b/app/Resources/views/admin/site/feuille_list.html.twig
@@ -4,6 +4,14 @@
     {% set token_delete=csrf_token('feuille_delete') %}
 
    <h2>Liste des feuilles</h2>
+
+   <div class="ui message">
+        <div class="header">
+            Si vous ne savez pas à quoi correspondent les feuilles : merci de ne pas les modifier
+        </div>
+        <p>Cela correspond au menu de gauche sur le site web.</p>
+    </div>
+
     <div class="ui menu">
         <a href="{{ path('admin_site_feuilles_add') }}" class="item">
             <div data-tooltip="Ajouter une feuille" data-position="bottom left">
@@ -39,13 +47,18 @@
                         </a>
                     </th>
                     <th>
-                        <a href="{{ path('admin_site_feuilles_list', {'sort': 'nom', 'direction' : ((direction == 'asc' and sort == 'date') ? 'desc': 'asc')}) }}">
+                        <a href="{{ path('admin_site_feuilles_list', {'sort': 'nom', 'direction' : ((direction == 'asc' and sort == 'nom') ? 'desc': 'asc')}) }}">
                             Nom
                         </a>
                     </th>
                     <th>
-                        <a href="{{ path('admin_site_feuilles_list', {'sort': 'etat' , 'direction' : ((direction == 'asc' and sort == 'date') ? 'desc': 'asc')}) }}">
+                        <a href="{{ path('admin_site_feuilles_list', {'sort': 'etat' , 'direction' : ((direction == 'asc' and sort == 'etat') ? 'desc': 'asc')}) }}">
                             Etat
+                        </a>
+                    </th>
+                    <th>
+                        <a href="{{ path('admin_site_feuilles_list', {'sort': 'position' , 'direction' : ((direction == 'asc' and sort == 'position') ? 'desc': 'asc')}) }}">
+                            Position
                         </a>
                     </th>
                     <th></th>
@@ -54,35 +67,36 @@
             </thead>
             <tbody>
             {% if feuilles|length > 0 %}
-                {% for rub in feuilles %}
+                {% for feuille in feuilles %}
                 <tr>
-                    <td>{% if rub.date != null %}{{ rub.date|date('d-m-Y') }}{% endif %}</td>
-                    <td style="white-space : normal;">{{ rub.nom }}</td>
-                     <td class="center aligned">
-                        {% if rub.etat == 1 %}
+                    <td>{% if feuille.date != null %}{{ feuille.date|date('d-m-Y') }}{% endif %}</td>
+                    <td style="white-space : normal;">{{ feuille.nom }}</td>
+                    <td class="center aligned">
+                        {% if feuille.etat == 1 %}
                             <a class="ui orange label">En ligne</a>
-                        {% elseif rub.etat == -1 %}
+                        {% elseif feuille.etat == -1 %}
                             <a class="ui grey label">Hors ligne</a>
                         {% else %}
                             <a class="ui violet label">En attente</a>
                         {% endif %}
                     </td>
+                    <td>{% if feuille.position != null %}{{ feuille.position|raw }}{% endif %}</td>
                     <td class="single line right aligned">
-                        <a id="modifier_{{ rub.id }}"
-                            href="{{ path('admin_site_feuilles_edit', {'id': rub.id }) }}"
+                        <a id="modifier_{{ feuille.id }}"
+                            href="{{ path('admin_site_feuilles_edit', {'id': feuille.id }) }}"
                             data-position="left center"
-                            data-tooltip="Modifier la feuille {{ rub.nom }}"
+                            data-tooltip="Modifier la feuille {{ feuille.nom }}"
                             class="compact ui icon button"
                         >
                             <i class="pencil alernate icon"></i>
                         </a>
 
-                        <a id="supprimer_{{ rub.id }}"
-                        href="{{path('admin_site_feuilles_delete', {'id': rub.id, 'token': token_delete }) }}"
+                        <a id="supprimer_{{ feuille.id }}"
+                        href="{{path('admin_site_feuilles_delete', {'id': feuille.id, 'token': token_delete }) }}"
                         data-position="left center"
-                        data-tooltip="Supprimer la feuille {{ rub.nom }}"
+                        data-tooltip="Supprimer la feuille {{ feuille.nom }}"
                         class="compact ui red icon button confirmable"
-                        data-confirmable-label="Etes-vous sûr de vouloir supprimer la feuille {{ rub.nom }} ?"
+                        data-confirmable-label="Etes-vous sûr de vouloir supprimer la feuille {{ feuille.nom }} ?"
                         >
                             <i class="trash icon"></i>
                         </a>
