--- a/app/Resources/views/admin/site/rubrique_list.html.twig
+++ b/app/Resources/views/admin/site/rubrique_list.html.twig
@@ -39,12 +39,12 @@
                         </a>
                     </th>
                     <th>
-                        <a href="{{ path('admin_site_rubriques_list', {'sort': 'nom', 'direction' : ((direction == 'asc' and sort == 'date') ? 'desc': 'asc')}) }}">
+                        <a href="{{ path('admin_site_rubriques_list', {'sort': 'nom', 'direction' : ((direction == 'asc' and sort == 'nom') ? 'desc': 'asc')}) }}">
                             Nom
                         </a>
                     </th>
                     <th>
-                        <a href="{{ path('admin_site_rubriques_list', {'sort': 'etat' , 'direction' : ((direction == 'asc' and sort == 'date') ? 'desc': 'asc')}) }}">
+                        <a href="{{ path('admin_site_rubriques_list', {'sort': 'etat' , 'direction' : ((direction == 'asc' and sort == 'etat') ? 'desc': 'asc')}) }}">
                             Etat
                         </a>
                     </th>
