fix bug de dates dans les forms Feuille et Rubrique + submitLabel

--- a/app/Resources/views/admin/site/rubrique_form.html.twig
+++ b/app/Resources/views/admin/site/rubrique_form.html.twig
@@ -47,7 +47,7 @@
                         <div class="three wide column">                            
                         </div>
                         <div class="three wide column">
-                            <input type="submit" value="Enregistrer" class="ui primary button">
+                            <input type="submit" value="{{ submitLabel }}" class="ui primary button">
                         </div>
                     </div>
                 </div>
