--- a/app/Resources/views/site/meetups/list.html.twig
+++ b/app/Resources/views/site/meetups/list.html.twig
@@ -25,7 +25,7 @@
 {% block content %}
     {{ render(controller(
         'AppBundle\\Controller\\SecondaryMenuController::displayAction',
-        { 'feuille_id': constant('Afup\\Site\\Corporate\\Feuille::ID_FEUILLE_ANTENNES') }
+        { 'feuille_id': constant('AppBundle\\Site\\Model\\Feuille::ID_FEUILLE_ANTENNES') }
     )) }}
 
     <div class="mw1400p center" id="container">
