--- a/app/Resources/views/site/offices.html.twig
+++ b/app/Resources/views/site/offices.html.twig
@@ -283,7 +283,7 @@
 {% block content %}
 {{ render(controller(
     'AppBundle\\Controller\\SecondaryMenuController::displayAction',
-    { 'feuille_id': constant('Afup\\Site\\Corporate\\Feuille::ID_FEUILLE_ANTENNES') }
+    { 'feuille_id': constant('AppBundle\\Site\\Model\\Feuille::ID_FEUILLE_ANTENNES') }
 )) }}
 <div class="mw1400p center" id="container">
 <div class="line" id="main">
