--- a/app/Resources/views/site/techletter/index.html.twig
+++ b/app/Resources/views/site/techletter/index.html.twig
@@ -9,7 +9,7 @@
 {% block content %}
 {{ render(controller(
     'AppBundle\\Controller\\SecondaryMenuController::displayAction',
-    { 'feuille_id': constant('Afup\\Site\\Corporate\\Feuille::ID_FEUILLE_NOS_ACTIONS') }
+    { 'feuille_id': constant('AppBundle\\Site\\Model\\Feuille::ID_FEUILLE_NOS_ACTIONS') }
 )) }}
 
 <div class="techletter-subscription" id="container">
